# Meshly

./: .gitignore  docker-compose.yml  dockerfile  package-lock.json  package.json  prometheus.yml
backend-node/: docker-compose.yml  dockerfile  index.js  package-lock.json  package.json  products.json  prometheus.yml
backend-rust/: Cargo.toml  dockerfile
backend-rust/src/: main.rs
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/public/fonts/: fonts.css
frontend/public/models/: Intro.blend  gate.glb  heroPage.glb  herotext.glb
frontend/redux/: store.tsx
frontend/redux/auth/: authSlice.tsx
frontend/redux/roles/: roleSlice.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/home/: layout.tsx  page.tsx
frontend/src/components/: Footer.tsx  HeroPage.tsx  HeroText.tsx  LoadingSpinner.tsx  ReduxProvider.tsx  TextField3d.tsx  navbar.tsx
frontend/src/components/cards/: ModelCard.tsx
frontend/src/components/screens/: LandingScreen.tsx  ModelScreen.tsx
frontend/src/components/ui/: floating-dock.tsx  placeholders-and-vanish-input.tsx
frontend/src/hooks/: useAuth.tsx
k6/: test.js
public/: index.html
src/: App.jsx
src/components/About/: About.jsx  ContributorSection.jsx
src/components/Contact/: Contact.jsx
src/components/Header/: Header.jsx
src/components/Login/: login.jsx
src/components/ModelViewer/: ModelViewer.jsx
src/components/Register/: register.jsx
src/components/Wishlist/: WishList.jsx
src/firebase/: firebase.jsx
