[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
mongodb = { version = "2.6.1", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
prometheus = "0.13"
lazy_static = "1.4"
serde_json = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.1"
anyhow = "1.0"
